--- a/02mayoJS.ipynb
+++ b/02mayoJS.ipynb
@@ -39,7 +39,7 @@
     "\n",
     "* En 1997  adopta el standar ECMAScript 1 (ES1) devido a diferencias entre implementaciones\n",
     "\n",
-    "![](historiaJs.png)\n",
+    "![](./images/historiaJs.png)\n",
     "\n",
     "\n",
     "* Dato extra: *Las computadoras entan escritas en codigo binario*."
@@ -125,7 +125,7 @@
     "\n",
     "//Escribir en la terminal: node + nombre del archivo con su extencion (.js)\n",
     "```\n",
-    "![](terminal.png)"
+    "![](images/terminal.png)"
    ]
   },
   {
