corrigiendo nombre de archivo analogia2.png
add image

--- a/03mayoJS.ipynb
+++ b/03mayoJS.ipynb
@@ -665,7 +665,7 @@
    "source": [
     "### Analogia de tipos de datos\n",
     "-----\n",
-    "![](images/anlogia2.png)"
+    "![](images/analogia2.png)"
    ]
   },
   {
